<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="CONNEXION"
        android:textSize="30dp"
        android:textColor="@color/teal_200"
        android:gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:scaleX="5"
        android:scaleY="5"
        android:layout_marginTop="160dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="150dp"
            android:textColor="@color/black"
            android:background="@drawable/shape"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textColor="@color/black"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="match_parent"
       android:id="@+id/login"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginRight="30dp"
       android:layout_marginLeft="30dp"
       android:layout_marginTop="30dp"
       android:background="@drawable/shape_button"
       android:text="@string/action_sign_in"
       android:textColor="@color/white"/>

    <TextView
        android:id="@+id/inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textSize="20dp" />

</LinearLayout>
</ScrollView>