<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulaire">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_form"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textColor="@color/teal_200"
            />


    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:hint="Nom"
        android:textColorHint="@color/black"
        android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape"
            android:drawablePadding="10dp"
            android:hint="Prenom"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/black"/>

    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:drawablePadding="10dp"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/black"/>

    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:hint="@string/confirmation_mdp"
        android:textColorHint="@color/black"/>

    <EditText
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:drawablePadding="10dp"
        android:hint="Adresse"
        android:inputType="text"
        android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape"
            android:drawablePadding="10dp"
            android:hint="Contact"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_button"
        android:text="@string/create_account"
            android:textSize="20dp"
            android:textColor="@color/white"/>

</LinearLayout>
    </ScrollView>